frontend/yaml/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: student-frontend-svc
spec:
  selector:
    app: student-frontend
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
