frontend/yaml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host:  acaf38f84f425491f928b9af5a125011-e00b47309f0d424d.elb.ap-south-1.amazonaws.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: student-frontend-svc
              port:
                number: 80

        - path: /api
          pathType: Prefix
          backend:
            service:
              name: student-app-svc
              port:
                number: 8080
